# SortGraphics

./: .gitignore  CMakeLists.txt  TODO  build.sh  run.sh
Skins/aqua/Canvas/: map.txt
Skins/aqua/CloseButton/: map.txt
Skins/aqua/ColorSelectButton/: map.txt
Skins/aqua/Eraser/: map.txt
Skins/aqua/FillBucketButton/: map.txt
Skins/aqua/MainMenu/: map.txt
Skins/aqua/TitleBar/: map.txt
Skins/aqua/ToolBar/: map.txt
Skins/aqua/Window/: map.txt
Skins/sort/selection/: map.txt
Skins/sort/stdstable/: map.txt
gui/: CMakeLists.txt
gui/glib/: CMakeLists.txt
gui/glib/include/: glib.hpp  glib_clock.hpp  glib_color.hpp  glib_events.hpp  glib_font.hpp  glib_primitives.hpp  glib_render_target.hpp  glib_render_texture.hpp  glib_render_window.hpp  glib_text.hpp  glib_texture.hpp  glib_tools.hpp
gui/glib/src/: glib_clock.cpp  glib_color.cpp  glib_events.cpp  glib_font.cpp  glib_primitives.cpp  glib_render_target.cpp  glib_render_texture.cpp  glib_render_window.cpp  glib_text.cpp  glib_texture.cpp  glib_tools.cpp
gui/include/: gui.hpp  gui_abstract_container_widget.hpp  gui_app_config.hpp  gui_dummy_container_widget.hpp  gui_events.hpp  gui_move_functor.hpp  gui_select_panel.hpp  gui_skin_manager.hpp  gui_title.hpp  gui_widget_manager.hpp  open_file.hpp
gui/include/gui_abstract_widget/: gui_abstract_widget.hpp  gui_abstract_widget_functor.hpp  gui_abstract_widget_skin.hpp  gui_container_widget.hpp
gui/include/gui_button/: gui_plain_button.hpp  gui_select_button.hpp
gui/include/gui_button/gui_abstract_button/: gui_abstract_button.hpp  gui_abstract_button_skin.hpp
gui/include/gui_canvas/: gui_canvas.hpp  gui_canvas_skin.hpp
gui/include/gui_main_window/: gui_content_window.hpp  gui_main_menu.hpp  gui_main_menu_skin.hpp  gui_main_window.hpp
gui/include/gui_tool_bar/: gui_tool_bar.hpp  gui_tool_bar_skin.hpp
gui/include/gui_tool_bar/gui_color_picker/: gui_color_picker.hpp  gui_color_select_functor.hpp
gui/include/gui_tool_bar/gui_select_panel/: gui_color_select_button_skin.hpp
gui/include/gui_tools/: gui_abstract_tool.cpp  gui_abstract_tool.hpp  gui_brush.hpp  gui_eraser.hpp  gui_fill_bucket.hpp  gui_tool_select_functor.hpp
gui/include/gui_window/: gui_window.hpp  gui_window_skin.hpp
gui/include/gui_window/gui_title_bar/: gui_title_bar.hpp  gui_title_bar_skin.hpp
gui/src/: gui_abstract_container_widget.cpp  gui_dummy_container_widget.cpp  gui_events.cpp  gui_move_functor.cpp  gui_select_panel.cpp  gui_skin_manager.cpp  gui_title.cpp  gui_widget_manager.cpp  open_file.cpp
gui/src/gui_abstract_widget/: gui_abstract_widget.cpp  gui_abstract_widget_functor.cpp  gui_abstract_widget_skin.cpp
gui/src/gui_button/: gui_plain_button.cpp  gui_select_button.cpp
gui/src/gui_button/gui_abstract_button/: gui_abstract_button.cpp  gui_abstract_button_skin.cpp
gui/src/gui_canvas/: gui_canvas.cpp  gui_canvas_skin.cpp
gui/src/gui_main_window/: gui_content_window.cpp  gui_main_menu.cpp  gui_main_menu_skin.cpp  gui_main_window.cpp
gui/src/gui_tool_bar/: gui_tool_bar.cpp  gui_tool_bar_skin.cpp
gui/src/gui_tool_bar/gui_color_picker/: gui_color_picker.cpp  gui_color_select_functor.cpp
gui/src/gui_tool_bar/gui_select_panel/: gui_color_select_button_skin.cpp
gui/src/gui_tools/: gui_brush.cpp  gui_eraser.cpp  gui_fill_bucket.cpp  gui_tool_select_functor.cpp
gui/src/gui_window/: gui_window.cpp  gui_window_skin.cpp
gui/src/gui_window/gui_title_bar/: gui_title_bar.cpp  gui_title_bar_skin.cpp
include/: app.hpp  clear_plot_functor.hpp  coord_sys.hpp  coord_system.hpp  draw_func_plot_functor.hpp  i_plot_functor.hpp  plot_widget.hpp  render_func_plot_functor.hpp  render_seq_plot_functor.hpp  render_sort_stat_functor.hpp  sort_graphics_widget.hpp  sort_plots_clear_functor.hpp  sort_plots_widget.hpp  sorting_system.hpp  sorts.hpp
src/: app.cpp  clear_plot_functor.cpp  coord_sys.cpp  coord_system.cpp  draw_func_plot_functor.cpp  i_plot_functor.cpp  main.cpp  plot_widget.cpp  render_sort_stat_functor.cpp  sort_graphics_widget.cpp  sort_plots_clear_functor.cpp  sort_plots_widget.cpp  sorting_system.cpp  sorts.cpp
